syntax = "proto3";
package health;
option go_package = "pkg/rpc_server/proto/health";

service HealthCheckService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}